Proyecto2/Grammar/Grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> printST SEMICOLON
Rule 5     instruction -> ifST SEMICOLON
Rule 6     instruction -> declarationST SEMICOLON
Rule 7     instruction -> whileST SEMICOLON
Rule 8     instruction -> callFunc SEMICOLON
Rule 9     instruction -> declareFunc SEMICOLON
Rule 10    instruction -> returnST SEMICOLON
Rule 11    instruction -> breakST SEMICOLON
Rule 12    instruction -> continueST SEMICOLON
Rule 13    instruction -> createStruct SEMICOLON
Rule 14    instruction -> declareStructST SEMICOLON
Rule 15    instruction -> assignAccessST SEMICOLON
Rule 16    types -> INT64
Rule 17    types -> STRING
Rule 18    types -> BOOL
Rule 19    statement -> instructions
Rule 20    declareFunc -> FUNCTION ID LEPAR RIPAR COLON COLON types statement END
Rule 21    declareFunc -> FUNCTION ID LEPAR decParams RIPAR COLON COLON types statement END
Rule 22    decParams -> decParams COMMA ID COLON COLON types
Rule 23    decParams -> ID COLON COLON types
Rule 24    returnST -> RETURN
Rule 25    returnST -> RETURN expression
Rule 26    declarationST -> ID EQUALS expression
Rule 27    declarationST -> ID EQUALS expression COLON COLON types
Rule 28    printST -> PRINTLN LEPAR expression RIPAR
Rule 29    printST -> PRINT LEPAR expression RIPAR
Rule 30    ifST -> IF expression statement END
Rule 31    ifST -> IF expression statement ELSE statement END
Rule 32    ifST -> IF expression statement elseIfList END
Rule 33    elseIfList -> ELSEIF expression statement
Rule 34    elseIfList -> ELSEIF expression statement ELSE statement
Rule 35    elseIfList -> ELSEIF expression statement elseIfList
Rule 36    createStruct -> STRUCT ID attList END
Rule 37    attList -> attList SEMICOLON ID COLON COLON types SEMICOLON
Rule 38    attList -> ID COLON COLON types
Rule 39    declareStructST -> ID COLON COLON ID
Rule 40    assignAccessST -> ID POINT ID EQUALS expression
Rule 41    whileST -> WHILE expression statement END
Rule 42    breakST -> BREAK
Rule 43    continueST -> CONTINUE
Rule 44    callFunc -> ID LEPAR RIPAR
Rule 45    callFunc -> ID LEPAR expList RIPAR
Rule 46    expList -> expList COMMA expression
Rule 47    expList -> expression
Rule 48    expression -> MINUS expression
Rule 49    expression -> NOT expression
Rule 50    expression -> expression PLUS expression
Rule 51    expression -> expression MINUS expression
Rule 52    expression -> expression TIMES expression
Rule 53    expression -> expression DIV expression
Rule 54    expression -> expression POT expression
Rule 55    expression -> expression GREATER expression
Rule 56    expression -> expression LESS expression
Rule 57    expression -> expression GREATEREQUAL expression
Rule 58    expression -> expression LESSEQUAL expression
Rule 59    expression -> expression EQUALSEQUALS expression
Rule 60    expression -> expression DISTINT expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> expression AND expression
Rule 63    expression -> finalExp
Rule 64    finalExp -> LEPAR expression RIPAR
Rule 65    finalExp -> INTLITERAL
Rule 66    finalExp -> FLOATLITERAL
Rule 67    finalExp -> STRINGLITERAL
Rule 68    finalExp -> TRUE
Rule 69    finalExp -> FALSE
Rule 70    finalExp -> ID
Rule 71    finalExp -> callFunc
Rule 72    finalExp -> accessST
Rule 73    accessST -> ID POINT ID

Terminals, with rules where they appear

AND                  : 62
BOOL                 : 18
BREAK                : 42
COLON                : 20 20 21 21 22 22 23 23 27 27 37 37 38 38 39 39
COMMA                : 22 46
CONTINUE             : 43
DISTINT              : 60
DIV                  : 53
ELSE                 : 31 34
ELSEIF               : 33 34 35
END                  : 20 21 30 31 32 36 41
EQUALS               : 26 27 40
EQUALSEQUALS         : 59
FALSE                : 69
FLOATLITERAL         : 66
FUNCTION             : 20 21
GREATER              : 55
GREATEREQUAL         : 57
ID                   : 20 21 22 23 26 27 36 37 38 39 39 40 40 44 45 70 73 73
IF                   : 30 31 32
INT64                : 16
INTLITERAL           : 65
LEPAR                : 20 21 28 29 44 45 64
LESS                 : 56
LESSEQUAL            : 58
MINUS                : 48 51
NOT                  : 49
OR                   : 61
PLUS                 : 50
POINT                : 40 73
POT                  : 54
PRINT                : 29
PRINTLN              : 28
RETURN               : 24 25
RIPAR                : 20 21 28 29 44 45 64
SEMICOLON            : 4 5 6 7 8 9 10 11 12 13 14 15 37 37
STRING               : 17
STRINGLITERAL        : 67
STRUCT               : 36
TIMES                : 52
TRUE                 : 68
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

accessST             : 72
assignAccessST       : 15
attList              : 36 37
breakST              : 11
callFunc             : 8 71
continueST           : 12
createStruct         : 13
decParams            : 21 22
declarationST        : 6
declareFunc          : 9
declareStructST      : 14
elseIfList           : 32 35
expList              : 45 46
expression           : 25 26 27 28 29 30 31 32 33 34 35 40 41 46 47 48 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 64
finalExp             : 63
ifST                 : 5
instruction          : 2 3
instructions         : 1 2 19
printST              : 4
returnST             : 10
start                : 0
statement            : 20 21 30 31 31 32 33 34 34 35 41
types                : 20 21 22 23 27 37 38
whileST              : 7

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . printST SEMICOLON
    (5) instruction -> . ifST SEMICOLON
    (6) instruction -> . declarationST SEMICOLON
    (7) instruction -> . whileST SEMICOLON
    (8) instruction -> . callFunc SEMICOLON
    (9) instruction -> . declareFunc SEMICOLON
    (10) instruction -> . returnST SEMICOLON
    (11) instruction -> . breakST SEMICOLON
    (12) instruction -> . continueST SEMICOLON
    (13) instruction -> . createStruct SEMICOLON
    (14) instruction -> . declareStructST SEMICOLON
    (15) instruction -> . assignAccessST SEMICOLON
    (28) printST -> . PRINTLN LEPAR expression RIPAR
    (29) printST -> . PRINT LEPAR expression RIPAR
    (30) ifST -> . IF expression statement END
    (31) ifST -> . IF expression statement ELSE statement END
    (32) ifST -> . IF expression statement elseIfList END
    (26) declarationST -> . ID EQUALS expression
    (27) declarationST -> . ID EQUALS expression COLON COLON types
    (41) whileST -> . WHILE expression statement END
    (44) callFunc -> . ID LEPAR RIPAR
    (45) callFunc -> . ID LEPAR expList RIPAR
    (20) declareFunc -> . FUNCTION ID LEPAR RIPAR COLON COLON types statement END
    (21) declareFunc -> . FUNCTION ID LEPAR decParams RIPAR COLON COLON types statement END
    (24) returnST -> . RETURN
    (25) returnST -> . RETURN expression
    (42) breakST -> . BREAK
    (43) continueST -> . CONTINUE
    (36) createStruct -> . STRUCT ID attList END
    (39) declareStructST -> . ID COLON COLON ID
    (40) assignAccessST -> . ID POINT ID EQUALS expression

    PRINTLN         shift and go to state 16
    PRINT           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 19
    WHILE           shift and go to state 20
    FUNCTION        shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    STRUCT          shift and go to state 25

    start                          shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    printST                        shift and go to state 4
    ifST                           shift and go to state 5
    declarationST                  shift and go to state 6
    whileST                        shift and go to state 7
    callFunc                       shift and go to state 8
    declareFunc                    shift and go to state 9
    returnST                       shift and go to state 10
    breakST                        shift and go to state 11
    continueST                     shift and go to state 12
    createStruct                   shift and go to state 13
    declareStructST                shift and go to state 14
    assignAccessST                 shift and go to state 15

state 1

    (0) S' -> start .



state 2

    (1) start -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . printST SEMICOLON
    (5) instruction -> . ifST SEMICOLON
    (6) instruction -> . declarationST SEMICOLON
    (7) instruction -> . whileST SEMICOLON
    (8) instruction -> . callFunc SEMICOLON
    (9) instruction -> . declareFunc SEMICOLON
    (10) instruction -> . returnST SEMICOLON
    (11) instruction -> . breakST SEMICOLON
    (12) instruction -> . continueST SEMICOLON
    (13) instruction -> . createStruct SEMICOLON
    (14) instruction -> . declareStructST SEMICOLON
    (15) instruction -> . assignAccessST SEMICOLON
    (28) printST -> . PRINTLN LEPAR expression RIPAR
    (29) printST -> . PRINT LEPAR expression RIPAR
    (30) ifST -> . IF expression statement END
    (31) ifST -> . IF expression statement ELSE statement END
    (32) ifST -> . IF expression statement elseIfList END
    (26) declarationST -> . ID EQUALS expression
    (27) declarationST -> . ID EQUALS expression COLON COLON types
    (41) whileST -> . WHILE expression statement END
    (44) callFunc -> . ID LEPAR RIPAR
    (45) callFunc -> . ID LEPAR expList RIPAR
    (20) declareFunc -> . FUNCTION ID LEPAR RIPAR COLON COLON types statement END
    (21) declareFunc -> . FUNCTION ID LEPAR decParams RIPAR COLON COLON types statement END
    (24) returnST -> . RETURN
    (25) returnST -> . RETURN expression
    (42) breakST -> . BREAK
    (43) continueST -> . CONTINUE
    (36) createStruct -> . STRUCT ID attList END
    (39) declareStructST -> . ID COLON COLON ID
    (40) assignAccessST -> . ID POINT ID EQUALS expression

    $end            reduce using rule 1 (start -> instructions .)
    PRINTLN         shift and go to state 16
    PRINT           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 19
    WHILE           shift and go to state 20
    FUNCTION        shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    STRUCT          shift and go to state 25

    instruction                    shift and go to state 26
    printST                        shift and go to state 4
    ifST                           shift and go to state 5
    declarationST                  shift and go to state 6
    whileST                        shift and go to state 7
    callFunc                       shift and go to state 8
    declareFunc                    shift and go to state 9
    returnST                       shift and go to state 10
    breakST                        shift and go to state 11
    continueST                     shift and go to state 12
    createStruct                   shift and go to state 13
    declareStructST                shift and go to state 14
    assignAccessST                 shift and go to state 15

state 3

    (3) instructions -> instruction .

    PRINTLN         reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FUNCTION        reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    STRUCT          reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    END             reduce using rule 3 (instructions -> instruction .)
    ELSE            reduce using rule 3 (instructions -> instruction .)
    ELSEIF          reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> printST . SEMICOLON

    SEMICOLON       shift and go to state 27


state 5

    (5) instruction -> ifST . SEMICOLON

    SEMICOLON       shift and go to state 28


state 6

    (6) instruction -> declarationST . SEMICOLON

    SEMICOLON       shift and go to state 29


state 7

    (7) instruction -> whileST . SEMICOLON

    SEMICOLON       shift and go to state 30


state 8

    (8) instruction -> callFunc . SEMICOLON

    SEMICOLON       shift and go to state 31


state 9

    (9) instruction -> declareFunc . SEMICOLON

    SEMICOLON       shift and go to state 32


state 10

    (10) instruction -> returnST . SEMICOLON

    SEMICOLON       shift and go to state 33


state 11

    (11) instruction -> breakST . SEMICOLON

    SEMICOLON       shift and go to state 34


state 12

    (12) instruction -> continueST . SEMICOLON

    SEMICOLON       shift and go to state 35


state 13

    (13) instruction -> createStruct . SEMICOLON

    SEMICOLON       shift and go to state 36


state 14

    (14) instruction -> declareStructST . SEMICOLON

    SEMICOLON       shift and go to state 37


state 15

    (15) instruction -> assignAccessST . SEMICOLON

    SEMICOLON       shift and go to state 38


state 16

    (28) printST -> PRINTLN . LEPAR expression RIPAR

    LEPAR           shift and go to state 39


state 17

    (29) printST -> PRINT . LEPAR expression RIPAR

    LEPAR           shift and go to state 40


state 18

    (30) ifST -> IF . expression statement END
    (31) ifST -> IF . expression statement ELSE statement END
    (32) ifST -> IF . expression statement elseIfList END
    (48) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIV expression
    (54) expression -> . expression POT expression
    (55) expression -> . expression GREATER expression
    (56) expression -> . expression LESS expression
    (57) expression -> . expression GREATEREQUAL expression
    (58) expression -> . expression LESSEQUAL expression
    (59) expression -> . expression EQUALSEQUALS expression
    (60) expression -> . expression DISTINT expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression AND expression
    (63) expression -> . finalExp
    (64) finalExp -> . LEPAR expression RIPAR
    (65) finalExp -> . INTLITERAL
    (66) finalExp -> . FLOATLITERAL
    (67) finalExp -> . STRINGLITERAL
    (68) finalExp -> . TRUE
    (69) finalExp -> . FALSE
    (70) finalExp -> . ID
    (71) finalExp -> . callFunc
    (72) finalExp -> . accessST
    (44) callFunc -> . ID LEPAR RIPAR
    (45) callFunc -> . ID LEPAR expList RIPAR
    (73) accessST -> . ID POINT ID

    MINUS           shift and go to state 42
    NOT             shift and go to state 43
    LEPAR           shift and go to state 45
    INTLITERAL      shift and go to state 46
    FLOATLITERAL    shift and go to state 47
    STRINGLITERAL   shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ID              shift and go to state 51

    expression                     shift and go to state 41
    finalExp                       shift and go to state 44
    callFunc                       shift and go to state 52
    accessST                       shift and go to state 53

state 19

    (26) declarationST -> ID . EQUALS expression
    (27) declarationST -> ID . EQUALS expression COLON COLON types
    (44) callFunc -> ID . LEPAR RIPAR
    (45) callFunc -> ID . LEPAR expList RIPAR
    (39) declareStructST -> ID . COLON COLON ID
    (40) assignAccessST -> ID . POINT ID EQUALS expression

    EQUALS          shift and go to state 54
    LEPAR           shift and go to state 56
    COLON           shift and go to state 55
    POINT           shift and go to state 57


state 20

    (41) whileST -> WHILE . expression statement END
    (48) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIV expression
    (54) expression -> . expression POT expression
    (55) expression -> . expression GREATER expression
    (56) expression -> . expression LESS expression
    (57) expression -> . expression GREATEREQUAL expression
    (58) expression -> . expression LESSEQUAL expression
    (59) expression -> . expression EQUALSEQUALS expression
    (60) expression -> . expression DISTINT expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression AND expression
    (63) expression -> . finalExp
    (64) finalExp -> . LEPAR expression RIPAR
    (65) finalExp -> . INTLITERAL
    (66) finalExp -> . FLOATLITERAL
    (67) finalExp -> . STRINGLITERAL
    (68) finalExp -> . TRUE
    (69) finalExp -> . FALSE
    (70) finalExp -> . ID
    (71) finalExp -> . callFunc
    (72) finalExp -> . accessST
    (44) callFunc -> . ID LEPAR RIPAR
    (45) callFunc -> . ID LEPAR expList RIPAR
    (73) accessST -> . ID POINT ID

    MINUS           shift and go to state 42
    NOT             shift and go to state 43
    LEPAR           shift and go to state 45
    INTLITERAL      shift and go to state 46
    FLOATLITERAL    shift and go to state 47
    STRINGLITERAL   shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ID              shift and go to state 51

    expression                     shift and go to state 58
    finalExp                       shift and go to state 44
    callFunc                       shift and go to state 52
    accessST                       shift and go to state 53

state 21

    (20) declareFunc -> FUNCTION . ID LEPAR RIPAR COLON COLON types statement END
    (21) declareFunc -> FUNCTION . ID LEPAR decParams RIPAR COLON COLON types statement END

    ID              shift and go to state 59


state 22
